<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_text">

    <fragment
        android:id="@+id/navigation_text"
        android:name="com.viksaa.resources.app.ui.text.TextFragment"
        android:label="@string/title_text"
        tools:layout="@layout/fragment_text" />

    <fragment
        android:id="@+id/navigation_other"
        android:name="com.viksaa.resources.app.ui.other.OtherFragment"
        android:label="@string/title_other"
        tools:layout="@layout/fragment_other" />

    <fragment
        android:id="@+id/navigation_media"
        android:name="com.viksaa.resources.app.ui.media.MediaFragment"
        android:label="@string/title_media"
        tools:layout="@layout/fragment_media" />
</navigation>