<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.viksaa.resources.app.ui.other.OtherViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.other.OtherFragment">

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/theme_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:padding="@dimen/text_padding"
            android:textOn="@string/light_text"
            android:textOff="@string/dark_text"
            android:layout_marginTop="@dimen/other_elements_padding"
            android:layout_marginBottom="@dimen/other_elements_padding"
            app:layout_constraintEnd_toEndOf="parent"
            android:onCheckedChanged="@{(_, isChecked) -> viewModel.setTheme(isChecked)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/example_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/button_text"
            android:padding="@dimen/text_padding"
            android:layout_marginTop="@dimen/other_elements_padding"
            android:layout_marginBottom="@dimen/other_elements_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/theme_switch" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/example_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/other_elements_padding"
            android:layout_marginBottom="@dimen/other_elements_padding"
            android:hint="@string/edit_hint_text"
            android:padding="@dimen/text_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/example_button" />

        <androidx.compose.ui.platform.ComposeView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_big"
            app:layout_constraintTop_toBottomOf="@id/example_edit_text"
            android:id="@+id/my_composable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
