<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.media.MediaFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/title_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/card_title"
                    android:textSize="@dimen/text_size"
                    android:padding="@dimen/text_padding"
                    android:text="@string/image_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:id="@+id/line"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_title"
                    android:layout_width="match_parent"
                    android:background="@color/purple_500"
                    android:layout_height="@dimen/line_size"/>

                <androidx.appcompat.widget.AppCompatImageView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line"
                    android:id="@+id/card_text"
                    app:srcCompat="@drawable/logo_finki"
                    android:padding="@dimen/text_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_sound"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_image"
            android:layout_margin="@dimen/title_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/card_title_1"
                    android:textSize="@dimen/text_size"
                    android:padding="@dimen/text_padding"
                    android:text="@string/sound_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:id="@+id/line_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_title_1"
                    android:layout_width="match_parent"
                    android:background="@color/purple_500"
                    android:layout_height="@dimen/line_size"/>

                <androidx.appcompat.widget.AppCompatImageView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line_1"
                    android:id="@+id/sound_play"
                    app:srcCompat="@drawable/ic_play"
                    android:padding="@dimen/text_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatImageView
                    app:layout_constraintStart_toEndOf="@id/sound_play"
                    app:layout_constraintTop_toBottomOf="@id/line_1"
                    android:id="@+id/sound_stop"
                    app:srcCompat="@drawable/ic_stop"
                    android:padding="@dimen/text_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_sound"
            android:layout_margin="@dimen/title_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/card_title_2"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                android:text="@string/video_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:id="@+id/line_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_title_2"
                android:layout_width="match_parent"
                android:background="@color/purple_500"
                android:layout_height="@dimen/line_size"/>

            <VideoView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_2"
                android:id="@+id/video_view"
                app:srcCompat="@drawable/logo_finki"
                android:padding="@dimen/text_padding"
                android:layout_width="match_parent"
                android:layout_height="@dimen/video_size"/>

            <androidx.appcompat.widget.AppCompatImageView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/video_view"
                android:id="@+id/video_play"
                app:srcCompat="@drawable/ic_play"
                android:padding="@dimen/text_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatImageView
                app:layout_constraintStart_toEndOf="@id/video_play"
                app:layout_constraintTop_toBottomOf="@id/video_view"
                android:id="@+id/video_stop"
                app:srcCompat="@drawable/ic_stop"
                android:padding="@dimen/text_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
